[package]
name = "unwrap-elf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.2"
hex = "0.4.3"
log = "0.4.17"
object = "0.29.0"
rusqlite = "0.28.0"
serde = "1.0.144"

[build-dependencies]
fs_extra = "1.2.0"
