[package]
name = "unelf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.2"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.17"
object = "0.29.0"
ppc750cl = { git = "https://github.com/terorie/ppc750cl.git" }
regex = "1.6.0"
rusqlite = "0.28.0"
serde = "1.0.144"
simple_logger = "2.3.0"
sha2 = "0.10.6"
zstd = "0.11.2"

[build-dependencies]
fs_extra = "1.2.0"
